services_discovery_SetLocalizedName() is now mandatory. Fix #1344 upnp_intel module still has to be rewritten (it will crash at runtime)